--- a/CocShop.Core/MessageHandler/ErrMessage.resx
+++ b/CocShop.Core/MessageHandler/ErrMessage.resx
@@ -118,15 +118,21 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Failure" xml:space="preserve">
-    <value>Failure</value>
+    <value>Failure.</value>
   </data>
-  <data name="InvalidPassword" xml:space="preserve">
+  <data name="Invalid_Password" xml:space="preserve">
     <value>The password you entered is incorrect.</value>
   </data>
-  <data name="InvalidUsername" xml:space="preserve">
+  <data name="Invalid_Username" xml:space="preserve">
     <value>The username does not exist.</value>
   </data>
-  <data name="NotFound" xml:space="preserve">
+  <data name="Not_Found" xml:space="preserve">
     <value>The requested URL was not found on this server.</value>
+  </data>
+  <data name="Product_Not_Found" xml:space="preserve">
+    <value>Product is not found.</value>
+  </data>
+  <data name="Product_Price_Not_Found" xml:space="preserve">
+    <value>Product price is not found.</value>
   </data>
 </root>
