--- a/CocShop.Core/MessageHandler/Message.resx
+++ b/CocShop.Core/MessageHandler/Message.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="NoRecord" xml:space="preserve">
+  <data name="No_Record" xml:space="preserve">
     <value>Nothing Found</value>
   </data>
   <data name="Success" xml:space="preserve">
